# IRS-PM-Winebot

./: .gitattributes  README.md  data collect.ipynb  data_preprocessing.ipynb  local_tuning.ipynb  requirements.txt
src/backend/: .dockerignore  .env.example  .env.mycareerwise  .gitignore  Dockerfile  README.md  TECH_MAP.md  config.py  env.example  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 009bcc43d7e6_add_occupations_table.py  082466f7d07d_add_ssoc_jobs_table.py  15fabb2e57af_add_career_paths_table.py  2a58663e8101_test4.py  2c6cc4833fa2_create_weights_table.py  328ca9d437be_add_programs_table.py  3cda552c5044_create_questions_table.py  42ba5e240848_add_ratings_column.py  43d1f68491a5_create_chat_table.py  511f00ea5d21_create_options_table.py  5c7943906638_add_salaries_to_occupations_table.py  6111621905a4_create_user_chat_reference.py  742ffbdef7ed_add_score_column_to_results_table.py  8c14c1a81f61_add_salary_similarity_column_in_results_.py  99a2b9ce523e_add_option_id_column_to_questions_table.py  9ac3260a3c19_test3.py  a197b5118a26_add_cips_table.py  a29dc2414a29_add_results_table.py  a51f18111fc7_create_user_table.py  a66c463bfaf2_test2.py  a73fd712eb63_test1.py  b1e37fef5c25_add_task_column_to_occupations_table.py  (+1 more)
src/backend/app/: __init__.py  config.py  errors.py  routes.py
src/backend/app/controllers/: chat.py  (+4 more)
src/backend/ml/: average_embeddings.pkl  embeddings.pkl  similarity.py
src/backend/seeds/: options.py  products.py  questions.py  weights.py
src/backend/static/: index.html
src/backend/tests/: helpers.py
(+75 files in other folders)
